src/objects/Mapper__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Field_Name__c</fullName>
        <label>Quickbooks Field Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Mapper</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Mapper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>